# strata

./: .codespellrc  .dockerignore  .editorconfig  .gitignore  .gptignore  .sample_env  .taplo.toml  CONTRIBUTING.md  Cargo.toml  Contributing.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  codecov.yml  config.toml  docker-compose.yml  example_config.toml  rust-toolchain.toml  rustfmt.toml  temp-log-1  temp-log-7  zk-input-1  zk-input-10  zk-input-11  zk-input-2  zk-input-3  zk-input-4  zk-input-5  zk-input-6  zk-input-7  zk-input-8  zk-input-9
crates/block-assembly/: Cargo.toml
crates/block-assembly/src/: error.rs  handle.rs  lib.rs  manager.rs  types.rs  worker.rs
crates/bridge-db/: Cargo.toml
crates/bridge-db/src/: lib.rs
crates/bridge-exec/: Cargo.toml
crates/bridge-exec/src/: config.rs  duties.rs  errors.rs  handler.rs  lib.rs  ws_client.rs
crates/bridge-relay/: Cargo.toml
crates/bridge-relay/src/: handler.rs  lib.rs  operator_bandwidth.rs  recent_msg_tracker.rs  relayer.rs
crates/bridge-sig-manager/: Cargo.toml
crates/bridge-sig-manager/src/: errors.rs  lib.rs  manager.rs  operations.rs  prelude.rs  signature.rs  state.rs
crates/bridge-tx-builder/: Cargo.toml
crates/btcio/: Cargo.toml  README.md
crates/btcio/src/: events.rs  (+12 more)
crates/chaintsn/: Cargo.toml  README.md
crates/common/: Cargo.toml
crates/component/: Cargo.toml
crates/consensus-logic/: Cargo.toml
crates/crypto/: Cargo.toml
crates/db/: Cargo.toml
crates/envelope_tx/: Cargo.toml
crates/evmexec/: Cargo.toml
crates/key-derivation/: Cargo.toml
crates/l1tx/: Cargo.toml
crates/mpt/: Cargo.toml
crates/primitives/: Cargo.toml
crates/rocksdb-store/: Cargo.toml
crates/sequencer/: Cargo.toml
crates/state/: Cargo.toml
crates/status/: Cargo.toml
crates/storage/: Cargo.toml
functional-tests/: README.md  clean.sh  constants.py  data.json  el_witness_3.json  el_witness_4.json  el_witness_5.json  el_witness_6.json  entry.py  env.bash  exec-in-last.sh  factory.py  fn_batch_commitment_duty.py  fn_bitcoin_reorg_checks.py  fn_block_finalization.py  fn_bridge_deposit.py  fn_bridge_deposit_happy.py  fn_bridge_deposit_reclaim.py  fn_bridge_deposit_reclaim_drt_seen.py  fn_bridge_deposit_seq_unreliable.py  fn_bridge_duties.py  fn_bridge_reassignment.py  fn_bridge_withdraw_happy.py  fn_bridge_withdrawal_duties.py  fn_btcio_broadcast.py  fn_btcio_connect.py  fn_btcio_inscriber.py  fn_btcio_read.py  fn_btcio_read_reorg.py  fn_btcio_resubmit_checkpoint.py  fn_cl_block_witness.py  fn_cl_checkpoint.py  fn_cl_deposits_to_el.py  fn_client_restart.py  fn_client_status.py  fn_deposits.py  fn_el_balance_transfer.py  fn_el_block_generation.py  fn_el_block_witness_data.py  fn_el_bridge_precompile.py  (+146 more)
functional-tests/contracts/: BlockhashOpCode.sol  Counter.sol  ERC20.sol  IndirectWithdrawalProxy.sol  PrecompileTestContract.sol  RevertContract.sol  SelfDestruct.sol
functional-tests/envs/: net_settings.py  rollup_params_cfg.py  testenv.py
functional-tests/factory/: config.py  factory.py  seqrpc.py
functional-tests/load/: cfg.py  job.py  service.py
functional-tests/mixins/: __init__.py  bridge_mixin.py  bridge_out_precompile_contract_mixin.py  seq_crash_mixin.py
functional-tests/rocksdb_prover/: IDENTITY  LOG  LOG.old.1726206520975518  LOG.old.1726207040896541  LOG.old.1726207218299847  LOG.old.1726218935874378  LOG.old.1726218984756978  LOG.old.1726219059390448  LOG.old.1726219742529808  LOG.old.1726223324406838  LOG.old.1726223442512423  LOG.old.1726441459337668  LOG.old.1726458668697804  LOG.old.1726458966660002  LOG.old.1726459048658944  LOG.old.1726459214928464  LOG.old.1726459312432467  LOG.old.1726459341345228  LOG.old.1726459943490082  LOG.old.1726460038485694  LOG.old.1726460116945065  LOG.old.1726460151463578  LOG.old.1726460211719923  LOG.old.1726460285616509  LOG.old.1726532277309320  LOG.old.1726532471561504  LOG.old.1726532939803729  LOG.old.1726533012048385  LOG.old.1726533093573740  LOG.old.1726533210296208  LOG.old.1726533474511234  LOG.old.1726533782132242  LOG.old.1726557362176333  LOG.old.1726657501068100  LOG.old.1726657735685975  LOG.old.1726703915561724  MANIFEST-000125  MANIFEST-000139  OPTIONS-000141
functional-tests/tests/: bridge_deposit_happy.py  bridge_deposit_reclaim.py  bridge_duties.py  bridge_reassignment.py  bridge_withdraw_happy.py  bridge_withdraw_happy_op_return.py  btcio_broadcast.py  btcio_inscriber.py  btcio_read.py  btcio_read_reorg.py  btcio_resubmit_checkpoint.py  cl_checkpoint.py  cl_ignore_checkpoint_with_invalid_proof.py  client_restart.py  client_status.py  crash_advance_consensus_state.py  crash_duty_sign_block.py  crash_sync_event.py  el_balance_transfer.py  el_batch_gas_limit.py  el_block_generation.py  el_block_state_diff.py  el_block_witness_data.py  el_bridge_precompile.py  el_genesis.py  el_pending_block.py  el_schnorr_precompile.py  el_stateroot_from_state_diffs.py  el_sync_from_chainstate.py  fn_bridge_deposit_happy.py  fn_bridge_deposit_reclaim.py  fn_bridge_deposit_reclaim_drt_seen.py  fn_bridge_deposit_seq_unreliable.py  fn_bridge_duties.py  fn_bridge_reassignment.py  fn_btcio_broadcast.py  fn_btcio_inscriber.py  fn_btcio_read.py  fn_btcio_read_reorg.py  fn_btcio_resubmit_checkpoint.py  (+43 more)
functional-tests/utils/: __init__.py  constants.py  eth.py  reth.py  schnorr.py  transaction.py  utils.py
reth/: Cargo.toml
reth/res/: alpen-dev-chain.json  devnet-chain.json
reth/src/: db.rs  main.rs
sequencer/: Cargo.toml
sequencer/src/: args.rs  config.rs  errors.rs  extractor.rs  helpers.rs  l1_reader.rs  main.rs  network.rs  rollup_params.rs  rpc_client.rs  rpc_server.rs
test/: .gitignore  README.md  block_generator.py  clean.sh  entry.py  env.bash  fn_btcio_connect.py  fn_btcio_read.py  fn_btcio_read_reorg.py  fn_client_status.py  pyproject.toml  run_test.sh  seqrpc.py  test.sh  test_hello.py
test/btcio_writer/: fn_writer.py
tests/: Cargo.toml  bridge-in-flow.rs  cooperative-bridge-flow.rs  cooperative-bridge-out-flow.rs  stub.rs
tests/common/: bitcoind.rs  bridge.rs  mod.rs
tests/rpc_test/: tsconfig.json
(+1232 files in other folders)
