[workspace]
members = [
  "crates/bridge-exec",
  "crates/bridge-relay",
  "crates/bridge-sig-manager",
  "crates/bridge-tx-builder",
  "crates/btcio",
  "crates/chaintsn",
  "crates/common",
  "crates/consensus-logic",
  "crates/crypto",
  "crates/db",
  "crates/eectl",
  "crates/evmexec",
  "crates/primitives",
  "crates/zkvm/adapters/risc0",
  "crates/zkvm/adapters/sp1",
  "crates/proof-impl/btc-blockspace",
  "crates/proof-impl/checkpoint",
  "crates/proof-impl/cl-stf",
  "crates/proof-impl/evm-ee-stf",
  "crates/proof-impl/l1-batch",
  "crates/zkvm/zkvm",
  "crates/reth/db",
  "crates/reth/evm",
  "crates/reth/exex",
  "crates/reth/node",
  "crates/reth/rpc",
  "crates/rpc/api",
  "crates/rpc/bridge-api",
  "crates/rpc/prover-client-api",
  "crates/rpc/types",
  "crates/rpc/utils",
  "crates/state",
  "crates/status",
  "crates/storage",
  "crates/sync",
  "crates/tasks",
  "crates/test-utils",
  "crates/util/mmr",
  "crates/util/shrex",
  "crates/vtxjmt",
  "provers/risc0",
  "provers/sp1",

  # binaries listed separately
  "bin/bridge-client",
  "bin/prover-client",
  "bin/strata-cli",
  "reth",
  "sequencer",
  "crates/tx-parser",

  # integration tests
  "tests",
]

default-members = [
  "bin/bridge-client",
  "bin/prover-client",
  "reth",
  "sequencer",
]

resolver = "2"

[workspace.dependencies]
alpen-express-btcio = { path = "crates/btcio" }
alpen-express-common = { path = "crates/common" }
alpen-express-consensus-logic = { path = "crates/consensus-logic" }
alpen-express-crypto = { path = "crates/crypto", default-features = false }
alpen-express-db = { path = "crates/db" }
alpen-express-eectl = { path = "crates/eectl" }
alpen-express-evmexec = { path = "crates/evmexec" }
alpen-express-mmr = { path = "crates/util/mmr" }
alpen-express-primitives = { path = "crates/primitives" }
alpen-express-rocksdb = { path = "crates/rocksdb-store" }
alpen-express-rpc-api = { path = "crates/rpc/api" }
alpen-express-rpc-types = { path = "crates/rpc/types" }
alpen-express-state = { path = "crates/state" }
alpen-express-status = { path = "crates/status" }
alpen-test-utils = { path = "crates/test-utils" }
express-bridge-exec = { path = "crates/bridge-exec" }
express-bridge-relay = { path = "crates/bridge-relay" }
express-bridge-rpc-api = { path = "crates/rpc/bridge-api" }
express-bridge-sig-manager = { path = "crates/bridge-sig-manager" }
express-bridge-tx-builder = { path = "crates/bridge-tx-builder" }
express-chaintsn = { path = "crates/chaintsn" }
express-proofimpl-btc-blockspace = { path = "crates/proof-impl/btc-blockspace" }
express-proofimpl-checkpoint = { path = "crates/proof-impl/checkpoint" }
express-proofimpl-evm-ee-stf = { path = "crates/proof-impl/evm-ee-stf" }
express-proofimpl-l1-batch = { path = "crates/proof-impl/l1-batch" }
express-prover-client-rpc-api = { path = "crates/rpc/prover-client-api" }
express-reth-db = { path = "crates/reth/db" }
express-reth-evm = { path = "crates/reth/evm" }
express-reth-exex = { path = "crates/reth/exex" }
express-reth-node = { path = "crates/reth/node" }
express-reth-primitives = { path = "crates/reth/primitives" }
express-reth-rpc = { path = "crates/reth/rpc" }
express-risc0-adapter = { path = "crates/zkvm/adapters/risc0" }
express-rpc-utils = { path = "crates/rpc/utils" }
express-sp1-adapter = { path = "crates/zkvm/adapters/sp1" }
express-storage = { path = "crates/storage" }
express-sync = { path = "crates/sync" }
express-tasks = { path = "crates/tasks" }
express-zkvm = { path = "crates/zkvm/zkvm" }                                     # FIXME make these names more consistent?
strata-tx-parser = { path = "crates/tx-parser" }
terrors = "0.3.0"
# FIXME make these names more consistent?

# IMPORTANT: ensure alloy-* and revm packages are of the same version as inside reth dependency
alloy-genesis = { version = "0.2", default-features = false }
alloy-rpc-types = { version = "0.2", default-features = false }
alloy-sol-types = "0.7.2"
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
argh = "0.1"
async-trait = "0.1.80"
base64 = "0.22.1"
bincode = "1.3.3"
bitcoin = { version = "=0.32.1", features = ["serde"] }
bitcoind = { version = "0.36.0", features = ["26_0"] }
bitcoind-json-rpc-types = "0.3.0"
borsh = { version = "1.5.0", features = ["derive"] }
bytes = { version = "1.6.0" }
chrono = { version = "0.4.38" }
digest = "0.10"
eyre = "0.6"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error" }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
http = "1.0.0"
hyper = "0.14.25"
jmt = "0.10.0"
jsonrpsee = "0.23"
jsonrpsee-types = "0.23"
lazy_static = "1.5.0"
lru = "0.12"
mockall = "0.11"
musig2 = { version = "0.1.0", features = ["serde"] }
num_enum = "0.7"
parking_lot = "0.12.3"
paste = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6"
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
reth = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-basic-payload-builder = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-chainspec = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-cli-commands = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-cli-util = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-db = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-errors = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-ethereum-payload-builder = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-evm = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-evm-ethereum = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-exex = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-ipc = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-node-api = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-node-ethereum = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-payload-builder = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-primitives = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1", default-features = false, features = [
  "std",
] }
reth-provider = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-revm = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-rpc = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-rpc-api = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-rpc-layer = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-rpc-types = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-rpc-types-compat = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
reth-trie-common = { git = "https://github.com/alpenlabs/reth.git", rev = "v1.0.3-alpen.1" }
revm = { version = "12.1.0", features = [
  "std",
  "secp256k1",
  "blst",
], default-features = false }
revm-primitives = { version = "7.1.0", features = [
  "std",
], default-features = false }
rockbound = { git = "https://github.com/alpenlabs/rockbound", rev = "v2.0.1-alpen.1" }
secp256k1 = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
serde_with = { version = "3.9.0" }
sha2 = "0.10"
tempfile = "3.10.1"
thiserror = "1.0"
threadpool = "1.8"
tokio = { version = "1.37", features = ["full"] }
toml = "0.5"
tower = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3
