[workspace]
members = [
  "crates/asm/common",
  "crates/asm/stf",
  "crates/asm/subprotocols/core",
  "crates/asm/subprotocols/bridge-v1",
  "crates/btcio",
  "crates/chaintsn",
  "crates/common",
  "crates/config",
  "crates/consensus-logic",
  "crates/crypto",
  "crates/db",
  "crates/eectl",
  "crates/evmexec",
  "crates/key-derivation",
  "crates/l1tx",
  "crates/mpt",
  "crates/primitives",
  "crates/proof-impl/btc-blockspace",
  "crates/proof-impl/checkpoint",
  "crates/proof-impl/cl-stf",
  "crates/proof-impl/evm-ee-stf",
  "crates/zkvm/hosts",
  "crates/reth/chainspec",
  "crates/reth/db",
  "crates/reth/evm",
  "crates/reth/exex",
  "crates/reth/node",
  "crates/reth/rpc",
  "crates/rpc/api",
  "crates/rpc/prover-client-api",
  "crates/rpc/types",
  "crates/rpc/utils",
  "crates/sequencer",
  "crates/state",
  "crates/status",
  "crates/storage",
  "crates/sync",
  "crates/tasks",
  "crates/test-utils",
  "crates/util/mmr",
  "crates/util/shrex",
  "crates/vtxjmt",
  "provers/risc0",
  "provers/sp1",

  # binaries listed separately
  "bin/datatool",
  "bin/alpen-cli",
  "bin/strata-client",
  "bin/alpen-reth",
  "bin/strata-sequencer-client",
  "bin/prover-client",
  "bin/prover-perf",

  # integration tests
  "tests",
  "crates/util/python-utils",
]

default-members = [
  "bin/datatool",
  "bin/prover-client",
  "bin/alpen-reth",
  "bin/strata-client",
  "bin/strata-sequencer-client",
  "crates/util/python-utils",
]

resolver = "2"

[workspace.dependencies]
alpen-chainspec = { path = "crates/reth/chainspec" }
alpen-reth-db = { path = "crates/reth/db" }
alpen-reth-evm = { path = "crates/reth/evm" }
alpen-reth-exex = { path = "crates/reth/exex" }
alpen-reth-node = { path = "crates/reth/node" }
alpen-reth-primitives = { path = "crates/reth/primitives" }
alpen-reth-rpc = { path = "crates/reth/rpc" }
alpen-reth-statediff = { path = "crates/reth/statediff" }
strata-asm-common = { path = "crates/asm/common" }
strata-asm-proto-bridge-v1 = { path = "crates/asm/subprotocols/bridge-v1" }
strata-asm-proto-core = { path = "crates/asm/subprotocols/core" }
strata-asm-stf = { path = "crates/asm/stf" }
strata-btcio = { path = "crates/btcio" }
strata-chaintsn = { path = "crates/chaintsn" }
strata-common = { path = "crates/common" }
strata-config = { path = "crates/config" }
strata-consensus-logic = { path = "crates/consensus-logic" }
strata-crypto = { path = "crates/crypto", default-features = false }
strata-db = { path = "crates/db" }
strata-eectl = { path = "crates/eectl" }
strata-evmexec = { path = "crates/evmexec" }
strata-key-derivation = { path = "crates/key-derivation" }
strata-l1tx = { path = "crates/l1tx" }
strata-mmr = { path = "crates/util/mmr" }
strata-mpt = { path = "crates/mpt" }
strata-primitives = { path = "crates/primitives" }
strata-proofimpl-btc-blockspace = { path = "crates/proof-impl/btc-blockspace" }
strata-proofimpl-checkpoint = { path = "crates/proof-impl/checkpoint" }
strata-proofimpl-cl-stf = { path = "crates/proof-impl/cl-stf" }
strata-proofimpl-evm-ee-stf = { path = "crates/proof-impl/evm-ee-stf" }
strata-prover-client-rpc-api = { path = "crates/rpc/prover-client-api" }
strata-rocksdb = { path = "crates/rocksdb-store" }
strata-rpc-api = { path = "crates/rpc/api" }
strata-rpc-types = { path = "crates/rpc/types" }
strata-rpc-utils = { path = "crates/rpc/utils" }
strata-sequencer = { path = "crates/sequencer" }
strata-state = { path = "crates/state" }
strata-status = { path = "crates/status" }
strata-storage = { path = "crates/storage" }
strata-sync = { path = "crates/sync" }
strata-tasks = { path = "crates/tasks" }
strata-test-utils = { path = "crates/test-utils" }
strata-zkvm-hosts = { path = "crates/zkvm/hosts" }

zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc9" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc9" }
zkaleido-risc0-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc9" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc9" }

# IMPORTANT: ensure alloy-* and revm packages are of the same version as inside reth dependency
# reth dependencies:
alloy-consensus = { version = "0.9.2", default-features = false }
alloy-eips = { version = "0.9.2", default-features = false }
alloy-genesis = { version = "0.9.2", default-features = false }
alloy-network = { version = "0.9.2", default-features = false }
alloy-primitives = { version = "0.8.19", default-features = false }
alloy-rlp = { version = "0.3.11", default-features = false }
alloy-rlp-derive = "0.3.11"
alloy-rpc-types = { version = "0.9.2", features = [
  "eth",
], default-features = false }
alloy-rpc-types-eth = { version = "0.9.2", default-features = false, features = [
  "serde",
] }
alloy-serde = { version = "0.9.2", default-features = false }
alloy-sol-types = "0.8.19"
alloy-trie = { version = "0.7", default-features = false }
revm = { version = "19.2.0", features = ["std"], default-features = false }
revm-primitives = { version = "15.1.0", features = [
  "std",
  "serde",
], default-features = false }

# reth itself:
reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5", default-features = false, features = [
  "std",
  "serde-bincode-compat",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.5" }

anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
argh = "0.1"
async-trait = "0.1.80"
base64 = "0.22.1"
bdk_bitcoind_rpc = "0.17.1"
bdk_esplora = { version = "0.20.1", features = [
  "async-https",
  "async-https-rustls",
  "tokio",
], default-features = false }
bdk_wallet = "1.0.0"
bincode = "1.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-bosd = { version = "0.4.0", default-features = false }
bitcoind-async-client = "0.1.1"
borsh = { version = "1.5.0", features = ["derive"] }
bytes = "1.6.0"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = "4"
deadpool = "0.12.1"
digest = "0.10"
ethnum = "1.5.0"
eyre = "0.6"
format_serde_error = { git = "https://github.com/AlexanderThaller/format_serde_error" }
futures = "0.3"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
http = "1.0.0"
hyper = "0.14.25"
jsonrpsee = "0.24"
jsonrpsee-types = "0.24"
lru = "0.12"
mockall = "0.11"
musig2 = { version = "0.1.0", features = ["serde"] }
num_enum = "0.7"
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
parking_lot = "0.12.3"
paste = "1.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6", default-features = false }
reqwest = { version = "0.12.7", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
rockbound = { git = "https://github.com/alpenlabs/rockbound", rev = "v2.0.1-alpen.3" }
secp256k1 = { version = "0.29.1", features = ["global-context", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "3.3.0"
sha2 = "0.10"
shrex = { version = "0.3.0-alpha.1", path = "crates/util/shrex", features = [
  "serde",
] }
tempfile = "3.10.1"
terrors = "0.3.0"
thiserror = "2.0.11"
threadpool = "1.8"
tokio = { version = "1.37", features = ["full"] }
toml = "0.5"
tower = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }
# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3

# This shall be used only in the CI for the prover to optimize the build time.
[profile.prover-ci]
inherits = "release"
lto = "off"
opt-level = 0
strip = true
