[tool.poetry]
version = "0.1.0"
name = "alpen-express-test"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
flexitest = { git = "https://codeberg.org/treyd/flexitest.git" }
bitcoinlib = "^0.6.15"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
ruff = "0.5.5"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
