[tool.poetry]
version = "0.1.0"
name = "strata-test"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
flexitest = { git = "https://codeberg.org/treyd/flexitest.git" }
strata_utils = { path = "../crates/util/python-utils", develop = true }
bitcoinlib = "^0.7.0"
websockets = "^13.1"
web3 = "^7.6.1"
py-solc-x = "^2.0.3"

[tool.poetry.dev-dependencies]
ruff = "0.8.1"
maturin = "1.7.6"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  # related to star imports
  "F405",
  "F403",
  # if block stuff
  "SIM102",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
