[package]
edition = "2021"
name = "alpen-vertex-reth"
version = "0.1.0"

[[bin]]
name = "alpen-vertex-reth"
path = "src/main.rs"

[dependencies]
alloy-genesis = { workspace = true }
clap = "4"
eyre = "0.6"
reth = { workspace = true }
reth-chainspec = { workspace = true }
reth-db = { workspace = true }
reth-node-ethereum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
