[package]
edition = "2021"
name = "alpen-express-reth"
version = "0.1.0"

[[bin]]
name = "alpen-express-reth"
path = "src/main.rs"

[dependencies]
alloy-genesis = { workspace = true }
clap = "4"
express-reth-db = { workspace = true }
express-reth-exex = { workspace = true }
express-reth-node = { workspace = true }
express-reth-rpc = { workspace = true }
eyre = { workspace = true }
reth = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli-commands = { workspace = true }
reth-cli-util = { workspace = true }
reth-db = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-primitives = { workspace = true }
rockbound = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
