[package]
name = "alpen-vertex-sequencer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alpen-vertex-sequencer"
path = "src/main.rs"

[dependencies]
alpen-vertex-common = { workspace = true }
alpen-vertex-consensus-logic = { workspace = true }
alpen-vertex-evmctl = { workspace = true }
alpen-vertex-db = { workspace = true }
alpen-vertex-primitives = { workspace = true }
alpen-vertex-rpc-api = { workspace = true }
alpen-vertex-state = { workspace = true }
alpen-vertex-btcio = { workspace = true }

anyhow = { workspace = true }
argh = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
parking_lot = { workspace = true }
reth-ipc = { workspace = true }
reth-primitives = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-types = { workspace = true }
rockbound = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
threadpool = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
