[package]
edition = "2021"
name = "alpen-express-sequencer"
version = "0.1.0"

[[bin]]
name = "alpen-express-sequencer"
path = "src/main.rs"

[dependencies]
alpen-express-btcio = { workspace = true }
alpen-express-common = { workspace = true }
alpen-express-consensus-logic = { workspace = true }
alpen-express-db = { workspace = true }
alpen-express-eectl = { workspace = true }
alpen-express-evmexec = { workspace = true }
alpen-express-primitives = { workspace = true }
alpen-express-rocksdb = { workspace = true }
alpen-express-rpc-api = { workspace = true }
alpen-express-rpc-types = { workspace = true }
alpen-express-state = { workspace = true }

anyhow = { workspace = true }
argh = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
format_serde_error = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
parking_lot = { workspace = true }
reqwest = { workspace = true }
reth-ipc = { workspace = true }
reth-primitives = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-types = { workspace = true }
rockbound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
threadpool = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
