[tool.poetry]
name = "alpen-vertex-test"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
flexitest = {git = "https://codeberg.org/treyd/flexitest.git"}
bitcoinlib = "^0.6.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
