[package]
edition = "2021"
name = "integration-tests"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
alpen-express-common = { workspace = true }
alpen-express-primitives = { workspace = true }
alpen-express-rocksdb = { workspace = true }
express-bridge-sig-manager = { workspace = true }
express-bridge-tx-builder = { workspace = true }
express-storage = { workspace = true }

anyhow = { workspace = true }                           # anyhow should be fine for tests
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoind = { workspace = true }
threadpool = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alpen-test-utils = { workspace = true }

[[test]]
name = "bridge-in-flow"
path = "bridge-in-flow.rs"

[[test]]
name = "cooperative-bridge-out-flow"
path = "cooperative-bridge-out-flow.rs"

[[test]]
name = "cooperative-bridge-flow"
path = "cooperative-bridge-flow.rs"
