[package]
edition = "2021"
name = "strata-block-assembly"
version = "0.1.0"

[dependencies]
strata-consensus-logic.workspace = true
strata-crypto.workspace = true
strata-db.workspace = true
strata-eectl.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
strata-test-utils.workspace = true
