[package]
edition = "2021"
name = "strata-bridge-exec"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
strata-bridge-tx-builder = { workspace = true }
strata-primitives = { workspace = true }

async-trait = { workspace = true }
bitcoin = { workspace = true }
format_serde_error = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
